代码优化修改单元测试